<resources>
    <string name="app_name">AndroShief</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- navbar -->
    <string name="action_settings">Settings</string>
    <string name="nav_management">Management</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_cookbook">CookBook</string>
    <string name="nav_home">Home</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_logout">Log out</string>

    <!-- auth -->
    <string name="auth_email" translatable="false">Email</string>
    <string name="auth_name">Name</string>
    <string name="auth_password">Password</string>
    <string name="auth_submit">Submit</string>

    <string name="sign_in">Log in</string>
    <string name="sign_in_progress_body">We are searching your account, please wait a bit</string>

    <string name="register">Sign up</string>
    <string name="progress_title">Loading…</string>
    <string name="register_progress_body">We are registering you, please wait a bit</string>

    <string name="reauthorize_body">Refreshing token</string>

    <string name="default_email" translatable="false">androshief@gmail.com</string>

    <string name="placeholder" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Integer eget rutrum sem, a tempus elit. Nullam vitae dignissim purus.
        Cras aliquam, augue sit amet ullamcorper lacinia, odio arcu sagittis ante.</string>



</resources>
