<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_menu_explore"
            android:title="@string/nav_explore" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_cookbook"
            android:icon="@drawable/ic_menu_my_recipes"
            android:title="@string/nav_cookbook" />
    </group>

    <item android:title="@string/nav_management">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
